comment feature works now, refactored some css to avoid overlap

--- a/frontend/src/css/Feed.css
+++ b/frontend/src/css/Feed.css
@@ -2,6 +2,7 @@
     display: inline-block;
     position: absolute;
     align-content: center;
+    height: auto;
     width: 75%;
     left: 10%;
     top: 5%;
@@ -15,7 +16,7 @@
     top: 15%;
     left: 10%;
     width: 80%;
-    height: 70%;
+    height: 90%;
 }
 
 .feed-heading {
@@ -35,46 +36,53 @@
 }
 
 .post-container {
-    overflow: scroll;
-    background-color: gray;
+    overflow: auto;
+    background-color: black;
     position: absolute;
-    border-color: black;
+    border: 5px #ed009c ridge;
     top: 0%;
     left: 0%;
     width: 75%;
-    height: 67%;
+    height: 75%;
 }
 
 .descr-container {
-    overflow: scroll;
+    overflow: auto;
     background-color: #121121;
     position: absolute;
-    border-color: black;
+    border: 5px #ed009c;
+    border-left-style: ridge;
+    border-bottom-style: ridge;
+    border-right-style: ridge;
     padding: 8px;
     bottom: 0%;
     left: 0%;
     width: 75%;
-    height: 33%;
+    height: 25%;
 }
 
 .comment-container {
-    overflow: scroll;
-    background-color: black;
+    overflow: auto;
+    background-color: #121121;
+    border: 5px #ed009c;
+    border-right-style: ridge;
+    border-bottom-style: ridge;
+    border-top-style: ridge;
     position: absolute;
-    border-color: black;
     padding: 8px;
     top: 0%;
     right: 5%;
     width: 20%;
+    min-height: 50px;
     height: 100%;
 }
 
 .comment-box {
     position:relative;
-    padding: 8px;
     width:auto;
     height: auto;
     min-height: 30px;
+    border: 5px #ed009c;
 }
 
 .button-container {
@@ -153,5 +161,14 @@
 .descr {
     font-size: medium;
     color:white;
+}
+
+.user-link {
+    font-size: medium;
+    color:white;
+}
+
+.user-link:hover {
+    color:blue
 }
 
